flux/apps/home-assistant/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [
            {
              "name": "home-assistant-nad",
              "interface": "home1",
              "ips": ["192.168.187.13/24"],
              "gateway": ["192.168.187.1"]
            }
          ]
        home-assistant.h3rmt.dev/network-revision: "2"
    spec:
      nodeSelector:
        location: "home"
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.9.3@sha256:d8922685169707fd91e8b9729902d975f06157d005e422874d201e0261dda196
          ports:
            - name: hass
              containerPort: 8123
              #  multicast discovery
            - containerPort: 9522
              hostPort: 9522
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: dbus
              mountPath: /run/dbus
              readOnly: true
          securityContext:
            privileged: false
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config-longhorn
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
