flux/apps/home-assistant/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-svc
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: hass
      port: 8123
      targetPort: 8123
